# pg_z

./: .clang-format  .clangd  .gitignore  DATA_FLOW.md  LICENSE.md  MEMORY_MANAGER.md  Makefile  Makefile.port.in  README.md  USAGE.md  brotli.c  configure.ac  gzip.c  lz4.c  mem_manager.c  pg_z--1.0.sql.in  pg_z.c  pg_z.control  pg_z.h  zstd.c
expected/: brotli.out  db_params.out  deflate.out  gzip.out  lz4.out  zstd.out
k8s/cnpg/: Dockerfile  cluster.yaml
sql/: brotli.sql  db_params.sql  deflate.sql  gzip.sql  lz4.sql  zstd.sql
test/benchmarks/: benchmark.sql  benchmark_mt_zstd.sql  brotli.sql  deflate.sql  finish.sql  gzip.sql  lz4.sql  prepare.sql  run_all.sql  zstd.sql  zstd_mt.sql
test/memory_leaks/: README.md  pg_z.supp  run_all.sql
test/memory_leaks/copy/: brotli.sql  deflate.sql  gzip.sql  lz4.sql  prepare.sql  run_all.sql  zstd.sql
test/memory_leaks/exception/: brotli.sql  deflate.sql  gzip.sql  lz4.sql  prepare.sql  run_all.sql  zstd.sql
test/memory_leaks/plpgsql/: brotli.sql  deflate.sql  gzip.sql  lz4.sql  zstd.sql
test/validation/: validate.sql
